--- a/TMDT/Views/Books/Details.cshtml
+++ b/TMDT/Views/Books/Details.cshtml
@@ -2,10 +2,10 @@
 
 @{
     ViewBag.Title = "Details";
-@*<<<<<<< Updated upstream*@
-Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
-Layout = "~/Views/Shared/_Layout.cshtml";
-//>>>>>>> Stashed changes
+    @*<<<<<<< Updated upstream*@
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    //>>>>>>> Stashed changes
 }
 <head>
     <meta charset="utf-8">
@@ -15,6 +15,7 @@ Layout = "~/Views/Shared/_Layout.cshtml";
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
 
+
 <h3 style="margin-left:25px"> Thông tin chi tiết sách</h3>
 <div class="row m-3">
     <div class="col-3">
@@ -22,25 +23,25 @@ Layout = "~/Views/Shared/_Layout.cshtml";
     </div>
     <div class="col-6">
 
-            <h2>@Model.BookName</h2>
-            <h4>@String.Format("{0:n0}", Model.BookPrice) VNĐ</h4>
-            <!-- Form đặt sách sách vào giỏ hàng -->
-            <hr style="border-bottom: 1px solid #337ab7;" />
-            <form action="~/ShoppingCart/AddToCart" class="form-inline" method="post">
+        <h2>@Model.BookName</h2>
+        <h4>@String.Format("{0:n0}", Model.BookPrice) VNĐ</h4>
+        <!-- Form đặt sách sách vào giỏ hàng -->
+        <hr style="border-bottom: 1px solid #337ab7;" />
+        @*<form action="~/ShoppingCart/AddToCart" class="form-inline" method="post">
                 <h4 class="mt-1">Số lượng</h4>
                 <div class="form-group m-2">
                     <input type="hidden" name="id" value=@Model.BookID />
                     <input type="number" class="form-control" value=1 name="quantity" style="width: 80px" min="1" max=@Model.InStock>
-                </div>             
+                </div>
                 <div class="btn btn-warning">
                    <button type="submit">Mua Ngay</button>
                 </div>
-            </form>
+            </form>*@
 
-            <hr style="border-bottom: 1px solid #337ab7;" />
-            <h6>Tóm tắt nội dung:</h6>
-            <p>@Model.BookDescription</p>
-        
+        @*<hr style="border-bottom: 1px solid #337ab7;" />*@
+        <h6>Tóm tắt nội dung:</h6>
+        <p>@Model.BookDescription</p>
+
     </div>
     <div class="col-2" style=" border:1px double #333;background-color:white">
         <h4 style="border-bottom:double">Các thông tin thêm</h4>
@@ -50,41 +51,134 @@ Layout = "~/Views/Shared/_Layout.cshtml";
 </div>
 
 <!-- Bình luận sách -->
-<h3 style="margin-left:25px">Bình Luận</h3>
-<div class="row m-3">
-    <div class="col-12">
-        <!-- Kiểm tra đăng nhập-->
-        @if (Session["User"] != null)
-        {
-            <form action="~/Comment/AddComment" method="post">
-                <label>Bình luận về sản phẩm này :</label>
-                <div class="form-group m-2">
-                    <input type="hidden" name="BookID" value=@Model.BookID />
-                    <textarea class="form-control" name="Content" rows="3" style="width: 50%"></textarea>
+@*<h3 style="margin-left:25px">Bình Luận</h3>
+    <div class="row m-3">
+        <div class="col-12">
+            @if (Session["User"] != null)
+            {
+                <form action="~/Comment/AddComment" method="post">
+                    <label>Bình luận về sản phẩm này :</label>
+                    <div class="form-group m-2">
+                        <input type="hidden" name="BookID" value=@Model.BookID />
+                        <textarea class="form-control" name="Content" rows="3" style="width: 50%"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary m-2">Bình luận</button>
+                </form>
+            }
+            else
+            {
+                <p style="color: red">Hãy đăng nhập để bình luận</p>
+            }
+        </div>
+    </div>*@
+@*Comments*@
+<div class="row">
+    <div class="col-md-12">
+        <div class="full">
+            <div class="tab_bar_section">
+                <ul class="nav nav-tabs" role="tablist">
+                    <li class="nav-item"> <a class="nav-link active" data-toggle="tab" href="#reviews">Reviews (@ViewBag.countReview)</a> </li>
+                </ul>
+                <!-- Tab panes -->
+                <div class="tab-content">
+                    <div id="reviews" class="tab-pane active">
+                        <div class="product_review">
+                            <h3>Reviews (@ViewBag.countReview)</h3>
+                            @foreach (var item in ViewBag.review)
+                            {
+                                <div class="commant-text row">
+                                   @* <div class="col-lg-2 col-md-2 col-sm-4">
+                                        <div class="profile"> <img class="img-responsive" src="~/Images/Avatar/@item.Account.Avatar" alt="#"> </div>
+                                    </div>*@
+                                    <div class="col-lg-10 col-md-10 col-sm-8">
+                                        <h5>@item.UserId</h5>
+                                        <p><span class="c_date">@item.Time</span> | <span><a rel="nofollow" class="comment-reply-link" href="#">Reply</a></span></p>
+                                        <span class="rating"> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star-o" aria-hidden="true"></i> </span>
+                                        <p class="msg">@item.Content</p>
+                                    </div>
+                                </div>
+                            }
+                       
+                            <div class="row">
+                                <div class="col-sm-12">
+                                    <div>
+                                        <label style="font-weight:bold; color:red">@ViewBag.error</label>
+                                    </div>
+                                    <div class="full review_bt_section">
+                                        <div class="float-right"> <a class="btn sqaure_bt" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">Leave a Review</a> </div>
+                                    </div>
+                                    <div class="full">
+                                        <div id="collapseExample" class="full collapse commant_box">
+                                            <form id="review" accept-charset="UTF-8" action="@Url.Action("Review","Books", new { proid=Model.BookID})" method="post">
+                                                <input id="ratings-hidden" name="rating" type="hidden">
+                                              
+                                                <textarea class="form-control animated" cols="50" id="new-review" name="Comment" placeholder="Enter your review here..." required=""></textarea>
+
+
+                                                <div class="full_bt center">
+                                                    <button class="btn sqaure_bt" type="submit">Comment</button> 
+                                                </div>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <button type="submit" class="btn btn-primary m-2">Bình luận</button>
-            </form>
-        }
-        else
-        {
-            <p style="color: red">Hãy đăng nhập để bình luận</p>
-        }
+            </div>
+        </div>
     </div>
 </div>
 
-<div class="row m-3">
-    <div class="col-12">
-        <h5>Các bình luận</h5>
-        <!-- Danh sách tất cả bình luận-->
-        @if (ViewBag.ListComment != null)
+<div class="row">
+    @foreach (var item in ViewData["books"] as IEnumerable<TMDT.Models.Book>)
+    {
+        if (item.InStock <= 0)
         {
-            foreach (var item in ViewBag.ListComment)
-            {
-                <div style="background-color: azure; width: 50%" class="p-3 mt-3 rounded">
-                    <p><b>@item.FKUser.UserName </b>(<small>@item.Time</small>)</p>
-                    <p>@item.Content</p>
+            <div class="col-md-4 col-sm-6 col-xs-12 margin_bottom_30_all" style="display:none">
+                <div class="product_list">
+                    <div class="product_img"><a href="@Url.Action("Detail","Books",new { id=item.BookID})">
+    <img class="img-responsive" src="@Url.Content(item.Image)" border="0" alt="banner" style="height:250px;width:auto" />
+</a></div>
+                   
+
+                    <div class="product_detail_btm">
+                        <div class="center">
+                            <h4><a href="it_shop_detail.html">@item.BookName</a></h4>
+                        </div>
+                        <div class="product_price">
+                            <p><span class="old_price">$15.00</span> – <span class="new_price">@item.BookPrice VND</span></p> 
+                        </div>
+                        <div class="button_Section_cont center"> <a class="btn dark_gray_bt" href="@Url.Action("AddToCart","ShoppingCart",new { id=item.BookID})">Thêm Vào Giỏ</a> </div>
+                    </div>
                 </div>
-            }
+            </div>
         }
-    </div>
+        else
+        {
+            <div class="col-md-4 col-sm-6 col-xs-12 margin_bottom_30_all">
+                <div class="product_list">
+                    <div class="product_img"><a href="@Url.Action("Details","Books",new { id=item.BookID})"><img class="img-responsive card-img" src="@Url.Content(item.Image)" alt="" style="height:200px; width:200px"> </a></div>
+                    <div class="product_detail_btm">
+                        <div class="center">
+                            <h4><a href="@Url.Action("AddToCart","ShoppingCart",new { id=item.BookID})>@item.BookName</a></h4>
+                        </div>
+                        <div class="product_price">
+                            <p><span class="old_price">$15.00</span> – <span class="new_price">@item.BookPrice VND</span></p>
+                        </div>
+                        <div class="button_Section_cont center"> <a class="btn dark_gray_bt" href="@Url.Action("AddToCart","ShoppingCart",new { id=item.BookID})">Thêm Vào Giỏ</a> </div>
+                    </div>
+                </div>
+            </div>
+        }
+    }
+    <br />
+    @*<div class="center col-md-12 col-sm-6 col-xs-12 margin_bottom_30_all">
+        @foreach (var item in ViewData["products"] as PagedList.IPagedList<TMDT.Models.Book>)
+        {
+            @Html.PagedListPager(ViewData["products"] as PagedList.IPagedList<TMDT.Models.Book.Product>, page => Url.Action("Detail", "Home", new { id = Model.ProductID, page }))
+            break;
+        }
+    </div>*@
 </div>
