--- a/TMDT/Views/Books/Index.cshtml
+++ b/TMDT/Views/Books/Index.cshtml
@@ -241,7 +241,7 @@ else
                                                 </h5>
                                                 <div class="content_price">
                                                     <span class="price product-price">
-                                                        @Html.DisplayFor(modelItem => item.BookPrice) &#36;
+                                                        @item.BookPrice.ToString("N0")₫
                                                     </span>
                                                     <span class="old-price product-price">999,999&#36;</span>
                                                     <span class="price-percent-reduction">50%</span>
@@ -259,104 +259,7 @@ else
                     }
                     <br />
 
-                    <!--<div class="recommended_items">-->
-                    <!--recommended_items-->
-                    <!--<h2 class=" text-center">Best Seller</h2>
-
-            <div id="recommended-item-carousel" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="item active">
-                        <div class="col-sm-4">
-                            <div class="product-image-wrapper">
-                                <div class="single-products">
-                                    <div class="productinfo text-center">
-                                        <img src="~/Content/Images/book3.jpg" alt="" />
-                                        <h2>$100.000</h2>
-                                        <p>Audi A4</p>
-                                        <a href="#" class="btn btn-warning">Buy</a>
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-4">
-                            <div class="product-image-wrapper">
-                                <div class="single-products">
-                                    <div class="productinfo text-center">
-                                        <img src="~/images/bestseller/bmwx1.jpg" alt="" />
-                                        <h2>$180.000</h2>
-                                        <p>Audi Q7</p>
-                                        <a href="#" class="btn btn-warning">Buy</a>
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-4">
-                            <div class="product-image-wrapper">
-                                <div class="single-products">
-                                    <div class="productinfo text-center">
-                                        <img src="~/images/bestseller/Audi Q5.jpg" alt="" />
-                                        <h2>$200.000</h2>
-                                        <p>Audi Q5</p>
-                                        <a href="#" class="btn btn-warning">Buy</a>
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="col-sm-4">
-                            <div class="product-image-wrapper">
-                                <div class="single-products">
-                                    <div class="productinfo text-center">
-                                        <img src="~/images/bestseller/bmwi8.jpg" alt="" />
-                                        <h2>420.000</h2>
-                                        <p>BMW i8</p>
-                                        <a href="#" class="btn btn-warning">Buy</a>
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-4">
-                            <div class="product-image-wrapper">
-                                <div class="single-products">
-                                    <div class="productinfo text-center">
-                                        <img src="~/images/bestseller/rangerover.jpg" alt="" />
-                                        <h2>$550.000</h2>
-                                        <p>Range Rover</p>
-                                        <a href="#" class="btn btn-warning">Buy</a>
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-4">
-                            <div class="product-image-wrapper">
-                                <div class="single-products">
-                                    <div class="productinfo text-center">
-                                        <img src="~/images/bestseller/bmw suv.jpg" alt="" />
-                                        <h2>$80.000</h2>
-                                        <p>BMW SUV</p>
-                                        <a href="#" class="btn btn-warning">Buy</a>
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <a class="left recommended-item-control" href="#recommended-item-carousel" data-slide="prev">
-                    <i class="fa fa-angle-left"></i>
-                </a>
-                <a class="right recommended-item-control" href="#recommended-item-carousel" data-slide="next">
-                    <i class="fa fa-angle-right"></i>
-                </a>
-            </div>
-        </div>-->
-                    <!--/recommended_items-->
+             
 
                 </div>
                 <h1>San pham moi nhat</h1>
@@ -383,7 +286,7 @@ else
                                             </h5>
                                             <div class="content_price">
                                                 <span class="price product-price">
-                                                    @Html.DisplayFor(modelItem => item.BookPrice) &#36;
+                                                    @item.BookPrice.ToString("N0")₫
                                                 </span>
                                                 <span class="old-price product-price">999,999&#36;</span>
                                                 <span class="price-percent-reduction">50%</span>
@@ -419,7 +322,7 @@ else
                                             </h5>
                                             <div class="content_price">
                                                 <span class="price product-price">
-                                                    @Html.DisplayFor(modelItem => item.BookPrice) &#36;
+                                                    @item.BookPrice.ToString("N0")₫
                                                 </span>
                                                 <span class="old-price product-price">999,999&#36;</span>
                                                 <span class="price-percent-reduction">50%</span>
