--- a/TMDT/Views/Books/Details.cshtml
+++ b/TMDT/Views/Books/Details.cshtml
@@ -44,7 +44,7 @@
 
     </div>
     <br />
-    <div class="col-2" style="display:inline-block; border:1px dashed #333;background-color:white;padding:20px; margin-top:30px">
+    <div class="col-2" style=" display:inline-block; border:1px dashed #333;background-color:white;padding:20px; margin:30px 50px">
         <h6>Tóm tắt nội dung:</h6>
         <p>@Model.BookDescription</p>
        
