--- a/TMDT/Views/ManageRole/Detail.cshtml
+++ b/TMDT/Views/ManageRole/Detail.cshtml
@@ -3,24 +3,29 @@
     ViewBag.Title = "Detail";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
-<form>
+@using (Html.BeginForm("EditUser", "ManageRole", FormMethod.Post, new { @class = "form-horizontal", enctype = "multipart/form-data" }))
+{
 
-    <table class="table table-bordered">
-        <tr>
-            <td>Email</td>
-            <td>pass</td>
-            <td>address</td>
-            <td>phone</td>
-            <td>sex</td>
-        </tr>
 
-        <tr>
+<table class="table table-bordered">
+    <tr>
+        <td>Email</td>
+        <td>pass</td>
+        <td>address</td>
+        <td>phone</td>
+        <td>sex</td>
+    </tr>
 
-            <td>@Model.Email</td>
-            <td>@Model.Password</td>
-            <td>@Model.Address</td>
-            <td>@Model.Phone</td>
-            <td>@Model.Sex</td>
-        </tr>
-    </table>
-</form>
+    <tr>
+        
+        <td><input type="text" name="id" id="id" value="@Model.Id" hidden="hidden" />
+        @Model.Email </td>
+        <td>@Model.Password
+        @Html.ActionLink("ChangePassword", "ChangePassword", new { id = Model.Id })</td>
+        <td><input class="form-control" value="@Model.Address" type="text" id="address" name="address" /></td>
+        <td><input class="form-control" value=@Model.Phone type="tel" id="phone" name="phone" /></td>
+        <td><input class="form-control" type="text" value=@Model.Sex id="sex" name="sex"/></td>
+    </tr>
+</table>
+<button class="btn btn-warning" type="submit">Sửa</button>
+}
