--- a/TMDT/Views/Books/Index.cshtml
+++ b/TMDT/Views/Books/Index.cshtml
@@ -178,7 +178,7 @@ else
                         </ul>
                     </div>
                 </div>
-               
+
                 <div class="container carousel">
                     <div class="container">
                         <div class="row">
@@ -205,7 +205,7 @@ else
                                                                 </h5>
                                                                 <div class="content_price">
                                                                     <span class="price product-price">
-                                                                       80,000₫
+                                                                        80,000₫
                                                                     </span>
                                                                     <span class="old-price product-price">999,999&#36;</span>
                                                                     <span class="price-percent-reduction">50%</span>
@@ -357,7 +357,47 @@ else
 
 
                 </div>
-
+                @*Ads*@
+                <section class="section-padding" id="about">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-12 text-center wow fadeIn" data-wow-duration="500ms" data-wow-delay="300ms">
+                                <p class="title">Our Valued Services</p>
+                                <h2 class="heading">What we Offer</h2>
+                            </div>
+                            <div class="col-md-4 col-sm-4 canvas-box magin30 text-center wow fadeInDown" data-wow-duration="500ms" data-wow-delay="300ms">
+                                <span class="text-center"><i class="icon-icons9 color6"></i></span>
+                                <h4 class="color6">Unlimited Features</h4>
+                                <p>Keep away from people who try to belittle your ambitions. Small people always do that but the really great.</p>
+                            </div>
+                            <div class="col-md-4 col-sm-4 canvas-box magin30 text-center wow fadeInDown" data-wow-duration="500ms" data-wow-delay="500ms">
+                                <span class="text-center"><i class="icon-umbrella color1"></i></span>
+                                <h4 class="color1">creative design</h4>
+                                <p>Keep away from people who try to belittle your ambitions. Small people always do that but the really great.</p>
+                            </div>
+                            <div class="col-md-4 col-sm-4 canvas-box magin30 text-center wow fadeInDown" data-wow-duration="500ms" data-wow-delay="700ms">
+                                <span class="text-center"><i class="icon-icons20 color6"></i></span>
+                                <h4 class="color6">Responsive Design</h4>
+                                <p>Keep away from people who try to belittle your ambitions. Small people always do that but the really great.</p>
+                            </div>
+                            <div class="col-md-4 col-sm-4 canvas-box magin30 text-center wow fadeInDown" data-wow-duration="500ms" data-wow-delay="900ms">
+                                <span class="text-center"><i class="icon-icons96  color1"></i></span>
+                                <h4 class="color1">Responsive Design</h4>
+                                <p>Keep away from people who try to belittle your ambitions. Small people always do that but the really great.</p>
+                            </div>
+                            <div class="col-md-4 col-sm-4 canvas-box magin30 text-center wow fadeInDown" data-wow-duration="500ms" data-wow-delay="1100ms">
+                                <span class="text-center"><i class="icon-globe color6"></i></span>
+                                <h4 class="color6">Responsive Design</h4>
+                                <p>Keep away from people who try to belittle your ambitions. Small people always do that but the really great.</p>
+                            </div>
+                            <div class="col-md-4 col-sm-4 canvas-box magin30 text-center wow fadeInDown" data-wow-duration="500ms" data-wow-delay="1200ms">
+                                <span class="text-center"><i class="icon-icons42 color1"></i></span>
+                                <h4 class="color1">Responsive Design</h4>
+                                <p>Keep away from people who try to belittle your ambitions. Small people always do that but the really great.</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
 
             </div>
         </div>
