--- a/TMDT/Views/Orders/Index.cshtml
+++ b/TMDT/Views/Orders/Index.cshtml
@@ -5,59 +5,66 @@
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-
-
-    <input class="form-control" id="myInput" type="text" placeholder="Search..">
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.NameRec)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AddressOrder)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PhoneOrder)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.OrderDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Payment)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Status)
-        </th>
-    </tr>
-
-    <tbody id="myTable">
-        @foreach (var item in Model)
-        {
+    <table class="table table-bordered" id="dataTable" width="100%" height="100%" cellspacing="2">
+        <thead class="thead-dark">
             <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.NameRec)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.AddressOrder)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.PhoneOrder)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.OrderDate)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Payment)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Status)
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.OrderID }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.OrderID }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.OrderID })
-                </td>
+                <th>
+                    @Html.DisplayNameFor(model => model.NameRec)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.AddressOrder)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.PhoneOrder)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.OrderDate)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Payment)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Status)
+                </th>
+                <th></th>
             </tr>
-        }</tbody>
+            </thead>
+        <tbody id="myTable">
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.NameRec)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.AddressOrder)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.PhoneOrder)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.OrderDate)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Payment)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Status)
+                    </td>
+                    <td>
+                        <a href="@Url.Action("Edit","Books",new { id = item.OrderID })" class="btn">
+                            <i class="far fa-edit fa-2x" style="color:#FFDAC1"></i>
+                        </a>
+                        <a href="@Url.Action("Details","Books",new { id = item.OrderID })" class="btn">
+                            <i class="fa fa-sticky-note fa-2x" style="color:#83d9dc" aria-hidden="true"></i>
 
-</table>
+                        </a>
+                        <a href="@Url.Action("Delete","Books",new { id = item.OrderID })" class="btn">
+                            <i class="fa fa-trash fa-2x" style="color:#FF9AA2" aria-hidden="true"></i>
+                        </a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+
+    </table>
