--- a/TMDT/Views/Providers/Index.cshtml
+++ b/TMDT/Views/Providers/Index.cshtml
@@ -6,46 +6,55 @@
 }
 
 
-    <button class="btn btn-success btn-sm">
+    <button class="btn btn-success btn-sm" style="margin-bottom:10px">
         @Html.ActionLink("Create New", "Create")
     </button>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.ProviderName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ProviderEmail)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ProviderPhone)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ProviderAddress)
-        </th>
-        <th></th>
-    </tr>
+    <table class="table table-bordered" id="dataTable" width="100%" height="100%" cellspacing="2">
+        <thead class="thead-dark">
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.ProviderName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.ProviderEmail)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.ProviderPhone)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.ProviderAddress)
+                </th>
+                <th></th>
+            </tr>
+            </thead>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ProviderName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ProviderEmail)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ProviderPhone)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ProviderAddress)
+                    </td>
+                    <td>
+                        <a href="@Url.Action("Edit","Books",new { id = item.ProviderID })" class="btn">
+                            <i class="far fa-edit fa-2x" style="        color: #F0AF83"></i>
+                        </a>
+                        <a href="@Url.Action("Details","Books",new { id = item.ProviderID })" class="btn">
+                            <i class="fa fa-sticky-note fa-2x" style="color:#83d9dc" aria-hidden="true"></i>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.ProviderName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ProviderEmail)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ProviderPhone)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ProviderAddress)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ProviderID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ProviderID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ProviderID })
-        </td>
-    </tr>
-}
+                        </a>
+                        <a href="@Url.Action("Delete","Books",new { id = item.ProviderID })" class="btn">
+                            <i class="fa fa-trash fa-2x" style="color:#FF9AA2" aria-hidden="true"></i>
+                        </a>
+                    </td>
+                </tr>
+            }
 
-</table>
+    </table>
