fix btn create new and edit btn

--- a/TMDT/Views/Books/Index.cshtml
+++ b/TMDT/Views/Books/Index.cshtml
@@ -20,7 +20,7 @@
 {
     <div class="row" style="margin-left:0px">
         <div class="col-4" style="float:right">
-            <button class="btn btn-success btn-sm" style="margin-bottom:10px">
+            <button class="btn btn-default btn-sm" style="margin-bottom:10px">
                 @Html.ActionLink("Create New", "Create")
             </button>
         </div>
@@ -84,7 +84,7 @@
 
                         @Html.DisplayFor(modelItem => item.BookName)
                     </td>
-                    <td>
+                    <td style="width:80px">
 
                         @Html.DisplayFor(modelItem => item.InStock)
                     </td>
