--- a/TMDT/Views/Shared/_LayoutAdmin.cshtml
+++ b/TMDT/Views/Shared/_LayoutAdmin.cshtml
@@ -101,10 +101,11 @@
     <link href="~/Content/styles.css" rel="stylesheet" />
     <link href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css" rel="stylesheet" crossorigin="anonymous" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="~/Library/font-awesome-4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="~/Library/font-awesome-4.7.0/css/font-awesome.css">
-    @Styles.Render("~/Content/LayoutAdminStyles")
-    @Scripts.Render("~/bundles/modernizr")
+    <link rel="stylesheet" href="~/Library/font-awesome-4.7.0/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="~/Library/font-awesome-4.7.0/css/font-awesome.css"/>
+    <link rel="stylesheet"href="~/Content/AQK.css" />
+          @Styles.Render("~/Content/LayoutAdminStyles")
+          @Scripts.Render("~/bundles/modernizr")
 </head>
 <body class="sb-nav-fixed">
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
