--- a/TMDT/Views/Authors/Index.cshtml
+++ b/TMDT/Views/Authors/Index.cshtml
@@ -6,10 +6,10 @@
 }
 
 
-<button class="btn btn-sm btn-warning" style="margin-bottom:10px">
+<button class="btn btn-sm btn-default" style="margin-bottom:10px">
     @Html.ActionLink("Create New", "Create")
 </button>
-<table class="table table-bordered">
+<table class="table table-bordered"  id="dataTable" width="100%" height="100%" cellspacing="2">
     <thead class="thead-dark">
         <tr>
             <th>
@@ -25,14 +25,14 @@
                     @Html.DisplayFor(modelItem => item.AuthorName)
                 </td>
                 <td>
-                    <a href="@Url.Action("Edit","Books",new { id = item.AuthorID })" class="btn">
+                    <a href="@Url.Action("Edit","Authors",new { id = item.AuthorID })" class="btn">
                         <i class="far fa-edit fa-2x" style="color:#FFDAC1"></i>
                     </a>
-                    <a href="@Url.Action("Details","Books",new { id = item.AuthorID })" class="btn">
+                    <a href="@Url.Action("Details","Authors",new { id = item.AuthorID })" class="btn">
                         <i class="fa fa-sticky-note fa-2x" style="color:#83d9dc" aria-hidden="true"></i>
 
                     </a>
-                    <a href="@Url.Action("Delete","Books",new { id = item.AuthorID })" class="btn">
+                    <a href="@Url.Action("Delete","Authors",new { id = item.AuthorID })" class="btn">
                         <i class="fa fa-trash fa-2x" style="color:#FF9AA2" aria-hidden="true"></i>
                     </a>
                 </td>
