--- a/TMDT/Views/Categories/Index.cshtml
+++ b/TMDT/Views/Categories/Index.cshtml
@@ -3,9 +3,8 @@
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
-
 }
-<button class="btn btn-success btn-sm" style="margin-bottom:10px">
+<button class="btn btn-default btn-sm" style="margin-bottom:10px">
     @Html.ActionLink("Create New", "Create")
 </button>
 <table class="table table-bordered" id="dataTable" width="100%" height="100%" cellspacing="2">
@@ -25,14 +24,14 @@
                 @Html.DisplayFor(modelItem => item.CateName)
             </td>
             <td>
-                <a href="@Url.Action("Edit","Books",new { id = item.CateID })" class="btn">
+                <a href="@Url.Action("Edit","Categories",new { id = item.CateID })" class="btn">
                     <i class="far fa-edit fa-2x" style="        color: #F0AF83"></i>
                 </a>
-                <a href="@Url.Action("Details","Books",new { id = item.CateID })" class="btn">
+                <a href="@Url.Action("Details","Categories",new { id = item.CateID })" class="btn">
                     <i class="fa fa-sticky-note fa-2x" style="color:#83d9dc" aria-hidden="true"></i>
 
                 </a>
-                <a href="@Url.Action("Delete","Books",new { id = item.CateID })" class="btn">
+                <a href="@Url.Action("Delete","Categories",new { id = item.CateID })" class="btn">
                     <i class="fa fa-trash fa-2x" style="color:#FF9AA2" aria-hidden="true"></i>
                 </a>
             </td>
