--- a/TMDT/Views/Providers/Index.cshtml
+++ b/TMDT/Views/Providers/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 
-    <button class="btn btn-success btn-sm" style="margin-bottom:10px">
+    <button class="btn btn-default btn-sm" style="margin-bottom:10px">
         @Html.ActionLink("Create New", "Create")
     </button>
     <table class="table table-bordered" id="dataTable" width="100%" height="100%" cellspacing="2">
@@ -43,14 +43,14 @@
                         @Html.DisplayFor(modelItem => item.ProviderAddress)
                     </td>
                     <td>
-                        <a href="@Url.Action("Edit","Books",new { id = item.ProviderID })" class="btn">
+                        <a href="@Url.Action("Edit","Providers",new { id = item.ProviderID })" class="btn">
                             <i class="far fa-edit fa-2x" style="        color: #F0AF83"></i>
                         </a>
-                        <a href="@Url.Action("Details","Books",new { id = item.ProviderID })" class="btn">
+                        <a href="@Url.Action("Details","Providers",new { id = item.ProviderID })" class="btn">
                             <i class="fa fa-sticky-note fa-2x" style="color:#83d9dc" aria-hidden="true"></i>
 
                         </a>
-                        <a href="@Url.Action("Delete","Books",new { id = item.ProviderID })" class="btn">
+                        <a href="@Url.Action("Delete","Providers",new { id = item.ProviderID })" class="btn">
                             <i class="fa fa-trash fa-2x" style="color:#FF9AA2" aria-hidden="true"></i>
                         </a>
                     </td>
