--- a/TMDT/Views/Role/Index.cshtml
+++ b/TMDT/Views/Role/Index.cshtml
@@ -9,7 +9,7 @@
     
      
  
-        @Html.ActionLink("Create Role", "Create", null, new { @class = "btn btn-primary" })
+        @Html.ActionLink("Create Role", "Create", null, new { @class = "btn btn-default" })
         <hr />
         <table class="table table-bordered">
             <thead>
