--- a/TMDT/Views/Shared/_Layout.cshtml
+++ b/TMDT/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                 <ul class="nav navbar-nav">
                     <li>
                         <div class="search_div_bar">
-                            @using (Html.BeginForm("SearchTenSach", "Book", new { @class = "search_bar" }))
+                            @using (Html.BeginForm("SearchTenSach", "Books", new { @class = "search_bar" }))
                             {
                 <input class="input_text" type="text" placeholder="Tìm kiếm sách..." name="tenSach">
                                 <input class="input_btn" type="submit" value="Tìm" />}
